--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,13 +18,14 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/home/Customers"> CLientes </span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/home/cards">Link</a>
+                        <a class="nav-link" href="/home/cards"> Contactos </a>
                     </li>
             </div>
         </nav>
+        
 
 
 
@@ -56,7 +57,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - mvcparaborrar - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - Prueba Mentum Group - <a asp-area="" asp-controller="Home" asp-action="Customers">Clientes</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
