--- a/Views/Home/Customers.cshtml
+++ b/Views/Home/Customers.cshtml
@@ -4,9 +4,9 @@
 }
 
 <h1 class="text-center">@ViewData["Title"]</h1>
-<div class="row">
+<div class="row ">
 
-  <button type="button" class="btn btn-primary text-right ml-3" data-toggle="modal" data-target="#Create">
+  <button type="button" class="btn btn-primary ml-3" data-toggle="modal" data-target="#Create">
     <i class="fas fa-address-book"></i>
     Nuevo Cliente
   </button>
@@ -81,7 +81,7 @@
 {  
   <div class="col-md">
 
-    <div class="card text-white bg-secondary mt-2" style="width: 18rem;">
+    <div class="card text-white bg-secondary mt-2" style="width: 20rem;">
       <div class="card-body">
           
             <div class="card-header"><i class="fas fa-user mr-2"></i>@item.Name</div>
@@ -98,21 +98,20 @@
             </button>
           </div>
           <div class="col-">
-            <button class="btn btn-danger"> 
+            <button class="btn btn-danger" id = "@item.Id" onclick="deleteId(this.id)" data-toggle="modal" data-target="#delete"> 
               <i class="fas fa-user-minus"></i>
             </button>
           </div>
             </div>
         
       </div>
-      <div class="form-group">
-        <label for="exampleFormControlSelect2">Contactos</label>
-        <select multiple class="form-control" id="exampleFormControlSelect2">
+      <div class="form-group ml-2 mr-2">
+        <label>Contactos</label>
+        <select multiple class="form-control">
+          @* @foreach (var client in item.Contacts)
+          {
           <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-          <option>5</option>
+          } *@
         </select>
       </div>
     </div>
@@ -120,6 +119,7 @@
 
 }
 
+<!-- edit -->
 <div class="modal fade" id="edit" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -130,7 +130,13 @@
         </button>
       </div>
       <div class="modal-body">
-        <form id="AjaxForm">
+        <form id="AjaxFormEdit">
+           <div class="input-group">
+              <div class="input-group-prepend">
+               <span class="input-group-text" id="validationTooltipUsernamePrepend">ID</span>
+              </div>
+               <input  class="input-group-text" id="IdEdit" readonly>
+           </div>
             <div class="form-group">
               <label for="name">Nombre completo</label>
               <input type="text" asp-for="customerModels.Name" required id="NameEdit" class="form-control" placeholder="Nombre ejemplo" >
@@ -149,6 +155,12 @@
               <small class="form-text text-muted">Digite un numero telefonico</small>
               <span asp-validation-for="customerModels.Phone" class="text-danger"></span>
             </div>
+            <div class="input-group">
+              <div class="input-group-prepend">
+               <span class="input-group-text"> Fecha de creación</span>
+              </div>
+               <input  class="input-group-text" id="CreateDateEdit" readonly>
+           </div>
             <div class="row">
               <div class="col-md-9">
                 <div id="ErrorAlert" class="alert alert-danger" style="display:none" role="alert">
@@ -172,8 +184,34 @@
                 Guardar
                 </button>
             </div>
-            </form>
+          </form>
       </div>
+    </div>
+  </div>
+</div>
+
+<!-- Delete -->
+<div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Eliminar</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form id="deleteForId">
+          ¿Seguro desea eliminar este cliente?
+        <input type="text" id="deleteId" hidden="true">
+          <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fas fa-times-circle"></i>Cerrar</button>
+        <button type="submit" id="SubmitBtn" class="btn btn-danger"><i class="fas fa-trash-alt"></i>Eliminar</button>
+      </div>
+        </form>
+        
+      </div>
+      
     </div>
   </div>
 </div>
@@ -224,10 +262,115 @@
     });
   </script>
   <script type="text/javascript">
-  function itemId(id){
-    console.log(id);
+  function itemId(id ){
+    console.log(typeof(id));
+    $.ajax({
+      url:"@Url.Action("GetCustomer","Home")",
+      data: {
+        ID: id
+      },
+      type: "get",
+      success: function(res){
+        if (res != null){
+          $('#IdEdit').val(res.id);
+          $('#NameEdit').val(res.name);
+          $('#AddressEdit').val(res.address);
+          $('#PhoneEdit').val(res.phone);
+          $('#CreateDateEdit').val(res.creationDate);
+        }
+      }
+    })
   }
-
   </script>
+
+  <script type="text/javascript">
+    $(function() {
+      $("#AjaxFormEdit").submit(function (e){
+        e.preventDefault();
+          
+        $("#SubmitBtn").prop("disabled",true);
+        console.log('aca estoy');
+        $.ajax({
+          url:"@Url.Action("EditCustomer","Home")",
+          data: {
+            Id: $('#IdEdit').val(),
+            Name: $("#NameEdit").val(),
+            Address: $("#AddressEdit").val(),
+            Phone: $("#PhoneEdit").val(),
+            CreateDate: $('#CreateDateEdit').val()
+          },
+          type: "post",
+          success: function(result){
+            if (result != null){
+              $("#PostList").html(result);
+
+              $("#PostList .row").first().hide();
+              $("#PostList .row").first().slideToggle("fast");
+
+              $("#Name").val("");
+              $("#Address").val("");
+              $("#Phone").val("");
+
+              $("#SubmitBtn").prop("disabled", false);
+
+              $("#ExitoAlert").show("slow").delay(2000).hide("slow");
+              location.reload();
+            }
+          },
+          error: function(xhr, status, error){
+            console.log('a ocurrido un error');
+            $("#ErrorAlert").show("slow").delay(2000).hide("slow");
+            $("#SubmitBtn").prop("disabled", false);
+          }
+        });
+      })
+    });
+  </script>
+  <script>
+    function deleteId(id){
+      $('#deleteId').val(id);
+    }
+  </script>
+
+  <script type="text/javascript">
+    $(function() {
+      $("#deleteForId").submit(function (e){
+        e.preventDefault();
+          
+        $("#SubmitBtn").prop("disabled",true);
+        console.log('aca estoy');
+        $.ajax({
+          url:"@Url.Action("DeleteCustomer","Home")",
+          data: {
+            Id: $('#deleteId').val(),
+          },
+          type: "post",
+          success: function(result){
+            if (result != null){
+              $("#PostList").html(result);
+
+              $("#PostList .row").first().hide();
+              $("#PostList .row").first().slideToggle("fast");
+
+              $("#Name").val("");
+              $("#Address").val("");
+              $("#Phone").val("");
+
+              $("#SubmitBtn").prop("disabled", false);
+
+              $("#ExitoAlert").show("slow").delay(2000).hide("slow");
+              location.reload();
+            }
+          },
+          error: function(xhr, status, error){
+            console.log('a ocurrido un error');
+            $("#ErrorAlert").show("slow").delay(2000).hide("slow");
+            $("#SubmitBtn").prop("disabled", false);
+          }
+        });
+      })
+    });
+  </script>
+
   @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
