change id in createContact

--- a/Views/Home/Customers.cshtml
+++ b/Views/Home/Customers.cshtml
@@ -246,7 +246,7 @@
         </div>
         <div class="modal-body">
         
-          <form id="AjaxEditContact">
+          <form id="AjaxCreateContact">
             <input type="text" id="createContactId" hidden="true">
 
             <div class="form-group">
